@@ -75,9 +75,21 @@ fi
 
 if [ ! -f /etc/nginx/ssl/self-signed-wlanpi.cert ]; then
     mkdir -p /etc/nginx/ssl
+    mkdir -p /etc/cockpit/ws-certs.d
     openssl req -x509 -newkey rsa:4096 -sha256 -days 3650 \
         -nodes -keyout /etc/nginx/ssl/self-signed-wlanpi.key -out /etc/nginx/ssl/self-signed-wlanpi.cert \
         -subj "/CN=wlanpi.local/O=wlanpi/OU=wlanpi"
+    chmod 654 /etc/nginx/ssl/self-signed-wlanpi.cert
+    chmod 650 /etc/nginx/ssl/self-signed-wlanpi.key
+    /bin/cp /etc/nginx/ssl/self-signed-wlanpi.key /etc/cockpit/ws-certs.d/0-self-signed-wlanpi.key
+    /bin/cp /etc/nginx/ssl/self-signed-wlanpi.cert /etc/cockpit/ws-certs.d/0-self-signed-wlanpi.cert
+    /bin/cp /etc/nginx/ssl/self-signed-wlanpi.key /etc/nginx/ssl/self-signed-grafana.key
+    /bin/cp /etc/nginx/ssl/self-signed-wlanpi.cert /etc/nginx/ssl/self-signed-wlanpi.cert
+    chmod 654 /etc/nginx/ssl/self-signed-grafana.cert
+    chmod 650 /etc/nginx/ssl/self-signed-grafana.key
+    getent group grafana || groupadd grafana
+    chgrp grafana /etc/nginx/ssl/self-signed-grafana.key
+    chgrp grafana /etc/nginx/ssl/self-signed-grafana.cert
     CONF_CHANGED=0
 fi
 
@@ -87,6 +99,7 @@ if [ $CONF_CHANGED -eq 0 ]; then
     if which nginx; then
         echo "Restarting nginx ..."
         deb-systemd-invoke restart nginx.service
+        deb-systemd-invoke restart wlanpi-webui.service
     fi
 fi
 
@@ -107,10 +120,10 @@ if [ -d /var/www/librespeed ]; then
     chown -R www-data:www-data /var/www/librespeed
 fi
 
-echo "Restarting cockpit ..."
-deb-systemd-invoke restart cockpit.service
-
 echo "Restarting wlanpi-core ..."
 deb-systemd-invoke restart wlanpi-core.service
+
+echo "Restarting wlanpi-webui ..."
+deb-systemd-invoke restart wlanpi-webui.service
 
 exit 0
