@@ -3,6 +3,10 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
+upstream grafana {
+    server 127.0.0.1:3000;
+}
+
 server {
     listen 443 ssl;
     server_name _;
@@ -34,22 +38,20 @@ server {
 
     location /app/grafana/ {
         proxy_set_header Host $http_host;
-        proxy_pass https://127.0.0.1:3000/;
-        # rewrite  ^/app/grafana/(.*)  /$1 break;
+        proxy_pass https://grafana;
         add_header X-Frame-Options "SAMEORIGIN";
     }
 
     location /app/grafana/api/live/ {
-        proxy_pass https://127.0.0.1:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $http_host;
-        rewrite  ^/app/grafana/(.*)  /$1 break;
+        proxy_pass http://grafana;
     }
     
     location /app/cockpit/ {
-        proxy_pass https://127.0.0.1:9090/app/cockpit/;
+        proxy_pass https://127.0.0.1:9090;
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_set_header X-Real-IP  $remote_addr;
