@@ -1,8 +1,7 @@
-import requests
-from flask import current_app, redirect, request
+from flask import redirect, request
 
 from wlanpi_webui.kismet import bp
-from wlanpi_webui.utils import systemd_service_message
+from wlanpi_webui.utils import start_stop_service
 
 
 @bp.route("/kismet")
@@ -13,46 +12,4 @@ def kismet():
 
 @bp.route("/<task>kismet")
 def start_stop_kismet(task):
-    headers = {
-        "accept": "application/json",
-        "content-type": "application/x-www-form-urlencoded",
-    }
-    params = {
-        "name": "kismet",
-    }
-    if task == "start":
-        current_app.logger.info("starting kismet")
-        try:
-            start_url = "http://127.0.0.1:31415/api/v1/system/service/start"
-            response = requests.post(
-                start_url,
-                params=params,
-                headers=headers,
-            )
-            if response.status_code != 200:
-                current_app.logger.info(
-                    f'systemd_service_message: {systemd_service_message("wlanpi-core")}'
-                )
-                current_app.logger.info("%s generated %s response", start_url, response)
-            return redirect(request.referrer)
-        except Exception as error:
-            current_app.logger.error(error)
-            return redirect(request.referrer)
-    elif task == "stop":
-        current_app.logger.info("stopping kismet")
-        try:
-            stop_url = "http://127.0.0.1:31415/api/v1/system/service/stop"
-            response = requests.post(
-                stop_url,
-                params=params,
-                headers=headers,
-            )
-            if response.status_code != 200:
-                current_app.logger.info(
-                    f'systemd_service_message: {systemd_service_message("wlanpi-core")}'
-                )
-                current_app.logger.info("%s generated %s response", stop_url, response)
-            return redirect(request.referrer)
-        except Exception as error:
-            current_app.logger.error(error)
-            return redirect(request.referrer)
+    return start_stop_service(task, "kismet")
